--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ cycler==0.11.0
 environs==9.3.5
 fonttools==4.28.2
 imageio==2.12.0
+install==1.3.4
 kiwisolver==1.3.2
 marshmallow==3.14.1
 matplotlib==3.5.0
 networkx==2.6.3
 numpy==1.21.4
+opencv-python==4.5.4.60
 packaging==21.3
 Pillow==8.4.0
 pyparsing==3.0.6
